--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -100,6 +100,14 @@
       }
     },
     {
+      "projectID": 282313,
+      "fileID": 3649236,
+      "required": true,
+      "__meta": {
+        "name": "TipTheScales"
+      }
+    },
+    {
       "projectID": 303119,
       "fileID": 3647223,
       "required": true,
@@ -327,6 +335,25 @@
       }
     },
     {
+      "projectID": 377109,
+      "fileID": 3631576,
+      "required": true,
+      "__meta": {
+        "name": "Tool Stats"
+      }
+    },
+    {
+      "projectID": 378266,
+      "fileID": 3567077,
+      "required": true,
+      "__meta": {
+        "name": "Mo' Structures (Fabric)",
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
       "projectID": 380393,
       "fileID": 3630010,
       "required": true,
@@ -420,6 +447,14 @@
       }
     },
     {
+      "projectID": 397278,
+      "fileID": 3599030,
+      "required": true,
+      "__meta": {
+        "name": "Unlimited Dragon Eggs (Fabric)"
+      }
+    },
+    {
       "projectID": 397510,
       "fileID": 3646095,
       "required": true,
@@ -509,6 +544,18 @@
       }
     },
     {
+      "projectID": 421649,
+      "fileID": 3638215,
+      "required": true,
+      "__meta": {
+        "name": "YUNG's API (Fabric)",
+        "explicit": false,
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
       "projectID": 423254,
       "fileID": 3509388,
       "required": true,
@@ -520,11 +567,30 @@
       }
     },
     {
+      "projectID": 423659,
+      "fileID": 3542784,
+      "required": true,
+      "__meta": {
+        "name": "Vistas"
+      }
+    },
+    {
       "projectID": 428912,
       "fileID": 3559150,
       "required": true,
       "__meta": {
         "name": "Krypton"
+      }
+    },
+    {
+      "projectID": 432008,
+      "fileID": 3570779,
+      "required": true,
+      "__meta": {
+        "name": "Visual Overhaul",
+        "dependencies": [
+          306612
+        ]
       }
     },
     {
@@ -565,6 +631,17 @@
       "required": true,
       "__meta": {
         "name": "WTHIT",
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
+      "projectID": 443782,
+      "fileID": 3342338,
+      "required": true,
+      "__meta": {
+        "name": "Better Beds",
         "dependencies": [
           306612
         ]
@@ -617,6 +694,14 @@
       "required": true,
       "__meta": {
         "name": "No Fade"
+      }
+    },
+    {
+      "projectID": 452834,
+      "fileID": 3541965,
+      "required": true,
+      "__meta": {
+        "name": "RightClickHarvest"
       }
     },
     {
@@ -674,6 +759,19 @@
       "required": true,
       "__meta": {
         "name": "Custom Entity Models (CEM)"
+      }
+    },
+    {
+      "projectID": 480684,
+      "fileID": 3650507,
+      "required": true,
+      "__meta": {
+        "name": "YUNG's Better Strongholds (Fabric)",
+        "dependencies": [
+          421649,
+          306612,
+          319057
+        ]
       }
     },
     {
@@ -837,6 +935,14 @@
       }
     },
     {
+      "projectID": 547358,
+      "fileID": 3566721,
+      "required": true,
+      "__meta": {
+        "name": "WMITAF"
+      }
+    },
+    {
       "projectID": 547692,
       "fileID": 3549496,
       "required": true,
@@ -861,6 +967,14 @@
       "required": true,
       "__meta": {
         "name": "Better Fps - Render Distance[Forge/Fabric]"
+      }
+    },
+    {
+      "projectID": 552630,
+      "fileID": 3550103,
+      "required": true,
+      "__meta": {
+        "name": "Vulnerable Flight"
       }
     },
     {
